Refactoring DTO class names